--- a/arch/arm64/configs/ld20_defconfig
+++ b/arch/arm64/configs/ld20_defconfig
@@ -211,6 +211,9 @@ CONFIG_SMC91X=y
 CONFIG_SMSC911X=y
 CONFIG_NET_VENDOR_SOCIONEXT=y
 CONFIG_SNI_AVE=y
+CONFIG_PHYLINK=y
+CONFIG_PHYLIB=y
+CONFIG_REALTEK_PHY=y
 # CONFIG_NET_VENDOR_STMICRO is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
